Added all platforms JavaFX SDKs to the project and automate the flags for gradlew run task to load the proper JavaFX SDK